== 0.12.0 2007-06-24

* 2 major enhancement
  * Using Erb for templates [thx http://snippets.dzone.com/posts/show/1723]
  * RubyGem.tmbundle for TextMate - to install go to gem folder and run "rake bundles:tm"
* 1 minor enhancement
  * -V option shows current newgem version [thx Gert Goet]
  * Hoe#extra_deps permanently changes @extra_deps [thx MIYAMUKO Katsuyuki]
* Dev improvements
  * Imports svn_branch for svn rake tasks
* Minor website changes
  * Added link to Topfunky's tutorial on Hoe

== 0.11.0

* 1 major enhancement
  * Create trunk/branches/tags subfolders using -s/--svn option
* 6 minor enhancements
  * Added dependency to activesupport gem
  * Modified spec.rb template for new rpec syntax (describe "..." { it "..." }) [thx Aslak Hellesøy]
  * Added 'email.txt' to the CLEAN list to be removed on 'rake clean'
  * Added  --delete-excluded to the rsync command [thx Jeroen Janssen]
  * On template: "Version" is in <p>'s
  * Specified CLEAN is added/or'd with default Hoe clean_globs (via |=)
* 1 website enhancement
  * Refreshed the example output as its a big old (CHANGELOG -> History.txt)
  * Removed the "click anywhere" javascript in version box - it was playing up with the link to the book
  
== 0.10.4 2007-06-02

* 2 minor enhancement
  * website_upload now ignores .svn files [Thx Jeroen Janssen]
  * website/index.txt includes link to "8 steps to fix other ppls code" and a default svn URL
* 1 website enhancement
  * Link to "Beginning Ruby" as it features this gem [Thx Peter Cooper for the plug] - its an affiliate amazon link so I can make $$$ and retire to Fiji

== 0.10.3 2007-05-25

* 1 major enhancement
  * rspec test framework now works via 'spec' task [Jeroen Janssen]
* 3 minor improvement
  * For rspec gems, default task => spec task
  * Generated rakefile checks for existance of rspec gem else shows how to get it
  * The require statement in the lib/<gemname>.rb file now uses lowercase project name [Jeroen Janssen]
    
== 0.10.2 2007-05-25
