@@ -1,3 +1,7 @@
+== TRUNK 2007-07-09
+
+* Add link to website for Using New Gem on Windows (without cygwin) [thx Jorge Cangas]
+
 == 0.12.0 2007-06-24
 
 * 2 major enhancement
